0026404: Visualization, Ray Tracing - use solid background color when gradient color is disabled

Test-case for issue #26404